# libonvif

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  pyproject.toml
example/: CMakeLists.txt  discover.c  manpage.txt  onvif-discover.c  onvif-getall.c  onvif-time.c  onvif-util.1  onvif-util.c  onvif-util.cpp  test_onvif  test_onvif.c
libavio/: CMakeLists.txt
libavio/cmake/: FindFFmpeg.cmake
libavio/include/: Clock.h  Decoder.h  Display.h  Encoder.h  Event.h  Exception.h  Filter.h  Frame.h  GLWidget.h  Pipe.h  PyRunner.h  Queue.h  Reader.h  Writer.h  avio.h
libavio/src/: Clock.cpp  Decoder.cpp  Display.cpp  Encoder.cpp  Event.cpp  Exception.cpp  Filter.cpp  Frame.cpp  GLWidget.cpp  Pipe.cpp  PyRunner.cpp  Reader.cpp  Writer.cpp  avio.cpp
libonvif/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
libonvif/cmake/: goblygook.cmake
libonvif/include/: cencode.h  getopt-win.h  onvif.h  onvif_data.h  onvifboss.h  session.h  sha1.h
libonvif/libonvif/: __init__.py  libxml2.so.2
libonvif/libxml2/lib/: libxml2.lib
libonvif/scripts/linux/: build_libs  build_libxml2  compile  copy_libs  detect_distro  env_variables  linux_build  linux_pkgs  make_build_dirs  prerequisites  vm_create  vm_delete  vm_download  vm_install  vm_mount_host  vm_start
libonvif/scripts/linux2/: build_aac  build_ffmpeg  build_h264  build_h265  build_libs  build_libxml2  build_sdl2  copy_libs  env_variables  linux_build
libonvif/scripts/linux_aarch64/: build_libs  compile  copy_libs  env_variables  linux_build  linux_pkgs
libonvif/scripts/mac/: build_libs  build_libxml2  changes3.12.plist  changes3.13.plist  changes3.14.plist  compile  copy_libs  mac_build  mac_pkgs
libonvif/scripts/windows/: build_pkgs.bat  compile.bat  copy_libs.bat  env_variables.bat  windows_build.bat  windows_build.ps1
libonvif/src/: cencode.c  onvif.c  onvif.cpp  onvifboss.cpp  sha1.c
libonvif/test/: onvif-test.cpp
libonvifboss/: CMakeLists.txt
libonvifboss/include/: onvifboss.h
libonvifboss/src/: onvifboss.cpp
onvif-camadmin/: CMakeLists.txt  cameralistmodel.cpp  cameralistmodel.h  cameralistview.cpp  camerapanel.cpp  camerapanel.h  configtab.cpp  main.cpp  mainwindow.cpp  mainwindow.h  manpage.txt  networktab.h  onvif-camadmin.1  ptztab.cpp  sliderpanel.cpp  sliderpanel.h  videotab.cpp  window.cpp  window.h
onvif-camadmin/include/: configtab.h  logindialog.h
onvif-camadmin/src/: cameradialogtab.cpp  cameralistview.cpp  logindialog.cpp
onvif-gui/: CMakeLists.txt  MANIFEST.in  README.md  admintab.py  camerapanel.py  filepanel.py  imagetab.py  logindialog.py  main.py  modulepanel.py  networktab.py  ptztab.py  pyproject.toml  run.py  settingspanel.py  setup.py  videotab.py
onvif-gui/components/: __init__.py  comboselector.py  fileselector.py  labelselector.py  thresholdslider.py
onvif-gui/detectron2/: __init__.py  predictor.py  tracker.py
onvif-gui/detectron2/checkpoint/: c2_model_loading.py  catalog.py  detection_checkpoint.py
onvif-gui/detectron2/config/: __init__.py  config.py  defaults.py  instantiate.py  lazy.py
onvif-gui/detectron2/configs/: Base-RCNN-FPN.yaml
onvif-gui/detectron2/data/: benchmark.py  build.py  catalog.py  common.py  dataset_mapper.py  detection_utils.py
onvif-gui/detectron2/layers/: batch_norm.py  deform_conv.py  nms.py  roi_align_rotated.py  wrappers.py
onvif-gui/detectron2/modeling/: __init__.py  anchor_generator.py  box_regression.py  matcher.py  mmdet_wrapper.py  poolers.py  postprocessing.py  sampling.py  test_time_augmentation.py
onvif-gui/detectron2/structures/: __init__.py  image_list.py  keypoints.py  masks.py  rotated_boxes.py
onvif-gui/detectron2/utils/: analysis.py  collect_env.py  comm.py  events.py  file_io.py  logger.py  serialize.py  testing.py  video_visualizer.py  visualizer.py
onvif-gui/docs/: manpage.txt  onvif-gui.1
onvif-gui/gui/: __init__.py  enums.py  glwidget.py  main.py  manager.py  player.py
onvif-gui/gui/components/: __init__.py  comboselector.py  directoryselector.py  fileselector.py  labelselector.py  progress.py  target.py  thresholdslider.py  waitdialog.py  warningbar.py
onvif-gui/gui/modules/: keypoint.py  retinanet.py  segment.py  yolox.py
onvif-gui/gui/onvif/: __init__.py  admintab.py  datastructures.py  imagetab.py  logindialog.py  networktab.py  ptztab.py  systemtab.py  videotab.py
onvif-gui/gui/panels/: __init__.py  alertpanel.py  audiopanel.py  camerapanel.py  filepanel.py  modulepanel.py  settingspanel.py  videopanel.py
onvif-gui/gui/protocols/: client.py  listen.py  server.py
onvif-gui/gui/resources/: darkstyle.qss
onvif-gui/include/: admintab.h  cameralistview.h  camerapanel.h  discovery.h  filepanel.h  glwidget.h  imagetab.h  logindialog.h  mainwindow.h  messagepanel.h  networktab.h  progress.h  ptztab.h  pyhelper.h  settingspanel.h  stylepanel.h  videotab.h
onvif-gui/modules/: keypoint.py  retinanet.py  sample.py  segment.py  yolox.py
onvif-gui/onvif_gui/: __init__.py  enums.py  glwidget.py  main.py  manager.py  player.py
onvif-gui/python/: echo.py
onvif-gui/resources/: 2023'  LICENSE  darkstyle.qss  resources.qrc  resources.rcc
onvif-gui/src/: admintab.cpp  cameralistview.cpp  camerapanel.cpp  configtab.cpp  discovery.cpp  filepanel.cpp  glwidget.cpp  imagetab.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  messagepanel.cpp  networktab.cpp  onvifmanager.cpp  progress.cpp  ptztab.cpp  settingspanel.cpp  stylepanel.cpp  videotab.cpp
onvif-gui/tracker/: byte_tracker.py  matching.py
onvif-util/: CMakeLists.txt  manpage.txt  onvif-util.1  onvif-util.cpp
onvif-util/docs/: manpage.txt  onvif-util.1
onvif-util/src/: onvif-util.cpp
sample/: CMakeLists.txt  admintab.cpp  admintab.h  camera.cpp  camera.h  cameradialogtab.h  cameralistmodel.cpp  cameralistview.cpp  cameralistview.h  camerapanel.cpp  camerapanel.h  configtab.cpp  configtab.h  discovery.cpp  discovery.h  imagetab.h  main.cpp  mainwindow.cpp  mainwindow.h  networktab.cpp  onvifmanager.h  ptztab.h  sample.pro  sample.pro.user.ad06eb2
(+387 files in other folders)
