[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libonvif"
version = "2.0.6"
authors = [
    { name="Stephen Rhodes", email="sr99622@gmail.com" },
]
description = "A python module for communicating with onvif cameras"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sr99622/libonvif"
"Bug Tracker" = "https://github.com/sr99622/libonvif/issues"